# artiq

./: RELEASE_NOTES.rst  bad_string.py  corrupt_str.py  device_db.py  flake.nix
artiq/compiler/: embedding.py  targets.py
artiq/compiler/transforms/: artiq_ir_generator.py  llvm_ir_generator.py
artiq/coredevice/: almazny.py  comm_analyzer.py  comm_kernel.py
artiq/examples/nac3devices/: nac3devices.py
artiq/firmware/bootloader/: Cargo.toml  main.rs
artiq/firmware/ksupport/: Cargo.toml  eh_artiq.rs  lib.rs  rtio.rs
artiq/firmware/libboard_artiq/: Cargo.toml  lib.rs  mailbox.rs  rpc_fifo.rs  rpc_queue.rs
artiq/firmware/libboard_misoc/: net_settings.rs
artiq/firmware/libdyld/: lib.rs
artiq/firmware/libeh/: Cargo.toml  eh_artiq.rs  lib.rs
artiq/firmware/libio/: Cargo.toml  cursor.rs  lib.rs  proto.rs
artiq/firmware/libproto_artiq/: Cargo.toml  lib.rs  mgmt_proto.rs  rpc_proto.rs  session_proto.rs
artiq/firmware/runtime/: Cargo.toml  analyzer.rs  kernel.rs  main.rs  mgmt.rs  moninj.rs  rtio_clocking.rs  sched.rs  session.rs
artiq/firmware/satman/: main.rs
artiq/frontend/: artiq_compile.py  artiq_run.py  artiq_sinara_tester.py
artiq/gateware/drtio/transceiver/: gtx_7series.py  gtx_7series_init.py
artiq/gateware/rtio/phy/: phaser.py
artiq/gateware/targets/: kasli.py
artiq/gateware/test/rtio/: test_dma.py
artiq/language/: embedding_map.py  environment.py
artiq/test/coredevice/: test_exceptions.py  test_portability.py
